NetBSD Problem Report #46166

From www@NetBSD.org  Sat Mar 10 14:04:40 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id ABC9B63E0EE
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 10 Mar 2012 14:04:40 +0000 (UTC)
Message-Id: <20120310140439.E15D763BFFC@www.NetBSD.org>
Date: Sat, 10 Mar 2012 14:04:39 +0000 (UTC)
From: tokuda@tokuda.net
Reply-To: tokuda@tokuda.net
To: gnats-bugs@NetBSD.org
Subject: VIA VX900 IDE Ultra-DMA support
X-Send-Pr-Version: www-1.0

>Number:         46166
>Category:       port-i386
>Synopsis:       VIA VX900 IDE Ultra-DMA support
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Mar 10 14:05:14 +0000 2012
>Closed-Date:    Sat Apr 07 03:51:10 +0000 2012
>Last-Modified:  Sat Apr 07 03:51:10 +0000 2012
>Originator:     Hiroshi Tokuda
>Release:        6.99.3
>Organization:
tokuda.net
>Environment:
NetBSD zbox 6.99.3 NetBSD 6.99.3 (GENERIC) #8: Sat Mar 10 19:27:14 UTC 2012  root@zbox:/export/s/201202231240Z/src/sys/arch/i386/compile/obj/GENERIC i386
>Description:
VIA VX900 IDE Ultra-DMA 133 support

viaide0 at pci0 dev 15 function 0
viaide0: VIA Technologies VX900 ATA133 controller
viaide0: bus-master DMA support present
viaide0: primary channel configured to native-PCI mode
viaide0: using ioapic0 pin 21 for native-PCI interrupt
atabus0 at viaide0 channel 0
viaide0: secondary channel configured to native-PCI mode
atabus1 at viaide0 channel 1
wd0 at atabus0 drive 0
wd0: <WDC WD1600BEVT-24A23T0>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 149 GB, 310101 cyl, 16 head, 63 sec, 512 bytes/sect x 312581808 sectors
wd0: 32-bit data port
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(viaide0:0:0): using PIO mode 4, Ultra-DMA mode 6 (Ultra/133) (using DMA)
>How-To-Repeat:
N/A
>Fix:
--- ./sys/dev/pci/pcidevs.orig  2012-02-15 22:23:27.000000000 +0000
+++ ./sys/dev/pci/pcidevs       2012-03-10 12:31:03.000000000 +0000
@@ -4677,6 +4677,7 @@
 product VIATECH VT82C597AGP    0x8597  VT82C597 (Apollo VP3) CPU-AGP Bridge
 product VIATECH VT82C598AGP    0x8598  VT82C598 (Apollo MVP3) CPU-AGP Bridge
 product VIATECH VT8605AGP      0x8605  VT8605 (Apollo ProMedia 133) Host-AGP Bridge
+product VIATECH VX900_IDE      0x9001  VX900 IDE Controller
 product VIATECH K8T890_PPB_A238        0xa238  K8T890 PCI-PCI Bridge
 product VIATECH VT8633AGP      0xb091  VT8633 (Apollo Pro 266) CPU-AGP Bridge
 product VIATECH VT8366AGP      0xb099  VT8366 (Apollo KT266) CPU-AGP Bridge
--- ./sys/dev/pci/viaide.c.orig 2011-12-29 05:25:40.000000000 +0000
+++ ./sys/dev/pci/viaide.c      2012-03-10 12:43:07.000000000 +0000
@@ -310,6 +310,11 @@
          NULL,
          via_chip_map,
        },
+       { PCI_PRODUCT_VIATECH_VX900_IDE,
+         0,
+         NULL,
+         via_chip_map,
+       },
        { PCI_PRODUCT_VIATECH_VT6410_RAID,
          0,
          NULL,
@@ -464,6 +469,11 @@
                        interface = PCIIDE_INTERFACE_BUS_MASTER_DMA |
                            PCIIDE_INTERFACE_PCI(0) | PCIIDE_INTERFACE_PCI(1);
                        break;
+               case PCI_PRODUCT_VIATECH_VX900_IDE:
+                       aprint_normal_dev(sc->sc_wdcdev.sc_atac.atac_dev,
+                           "VIA Technologies VX900 ATA133 controller\n");
+                       sc->sc_wdcdev.sc_atac.atac_udma_cap = 6;
+                       break;
                default:
                        /*
                         * get a PCI tag for the ISA bridge.

>Release-Note:

>Audit-Trail:
From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46166 CVS commit: src/sys/dev/pci
Date: Sun, 18 Mar 2012 17:29:06 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sun Mar 18 17:29:06 UTC 2012

 Modified Files:
 	src/sys/dev/pci: pcidevs

 Log Message:
 Add VIA VX900 media system processor IDE controller.
 PR/46166 from Hiroshi Tokuda.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1105 -r1.1106 src/sys/dev/pci/pcidevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46166 CVS commit: src/sys/dev/pci
Date: Sun, 18 Mar 2012 17:30:21 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sun Mar 18 17:30:21 UTC 2012

 Modified Files:
 	src/sys/dev/pci: pcidevs.h pcidevs_data.h

 Log Message:
 Regen from pcidevs rev 1.1106:
 > Add VIA VX900 media system processor IDE controller.
 > PR/46166 from Hiroshi Tokuda.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1100 -r1.1101 src/sys/dev/pci/pcidevs.h
 cvs rdiff -u -r1.1099 -r1.1100 src/sys/dev/pci/pcidevs_data.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46166 CVS commit: src/sys/dev/pci
Date: Sun, 18 Mar 2012 17:50:43 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sun Mar 18 17:50:43 UTC 2012

 Modified Files:
 	src/sys/dev/pci: viaide.c

 Log Message:
 Add UDMA support for VIA VX900 media system processor IDE controller.
 PR/46166 from Hiroshi Tokuda.

 This should be pulled up to netbsd-6, since ZOTAC ZBOX nano VD01
 http://www.zotacusa.com/zbox-nano-vd01.html
 exhibited at NetBSD booth in Open Source Conference 2012 Tokyo Spring
 was favored by many people.


 To generate a diff of this commit:
 cvs rdiff -u -r1.77 -r1.78 src/sys/dev/pci/viaide.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46166 CVS commit: [netbsd-6] src/sys/dev/pci
Date: Tue, 3 Apr 2012 15:52:27 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Tue Apr  3 15:52:27 UTC 2012

 Modified Files:
 	src/sys/dev/pci [netbsd-6]: pcidevs viaide.c

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #151):
 	sys/dev/pci/viaide.c: revision 1.78
 	sys/dev/pci/pcidevs: revision 1.1106
 Add VIA VX900 media system processor IDE controller.
 PR/46166 from Hiroshi Tokuda.
 Regen from pcidevs rev 1.1106:
 Add VIA VX900 media system processor IDE controller.
 PR/46166 from Hiroshi Tokuda.
 Add UDMA support for VIA VX900 media system processor IDE controller.
 PR/46166 from Hiroshi Tokuda.
 This should be pulled up to netbsd-6, since ZOTAC ZBOX nano VD01
 http://www.zotacusa.com/zbox-nano-vd01.html
 exhibited at NetBSD booth in Open Source Conference 2012 Tokyo Spring
 was favored by many people.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1102.2.2 -r1.1102.2.3 src/sys/dev/pci/pcidevs
 cvs rdiff -u -r1.77 -r1.77.2.1 src/sys/dev/pci/viaide.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: port-i386-maintainer->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Sat, 07 Apr 2012 12:51:10 +0900
Responsible-Changed-Why:
As a committer.


State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 07 Apr 2012 12:51:10 +0900
State-Changed-Why:
Committed and pulled up to netbsd-6. Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.