Regen from pcidevs rev 1.1106: > Add VIA VX900 media system processor IDE controller. > PR/46166 from Hiroshi Tokuda.